--- a/technological-telescope/src/components/Login.astro
+++ b/technological-telescope/src/components/Login.astro
@@ -32,7 +32,7 @@ if (Astro.request.method === 'POST') {
     <div class="right-container">
       <div id="login-container">
         <form id="loginForm" method="POST">
-          <h2>Log in</h2>
+          <h2>Enter your employee credentials</h2>
           <input type="text" placeholder="Username" id="username" name="username" required />
           <input type="password" placeholder="Password" id="password" name="password" required />
           <button type="submit">Go</button>
