--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -6,22 +6,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(11, 80, 165);
+    background-color: rgb(0, 35, 152);
 }
 
-.hero nav {
-    width: 25%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
 
 .logo {
     width: 50%;
     height: 100%;
     display: flex;
+    padding-left: 2rem;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
 }
 
 .small-logo {
@@ -33,5 +28,23 @@
 }
 
 .options {
-    width: 25%;
+    width: auto;
+}
+
+main {
+    background-color: #f5f5f5;
+    min-height: calc(100vh - 200px);
+    padding: 2rem 0;
+}
+
+footer {
+    background-color: rgb(0, 35, 152);
+    color: white;
+    text-align: center;
+    padding: 1rem;
+    margin-top: auto;
+}
+
+footer p {
+    margin: 0;
 }
