--- a/frontend/src/styles/Welcome.css
+++ b/frontend/src/styles/Welcome.css
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(0, 35, 152);
+    background-color: #1a1a1a;
 }
 
 
@@ -34,11 +34,11 @@
 main {
     background-color: #f5f5f5;
     min-height: calc(100vh - 200px);
-    padding: 2rem 0;
+    padding: 0 0 2rem 0;
 }
 
 footer {
-    background-color: rgb(0, 35, 152);
+    background-color: #1a1a1a;
     color: white;
     text-align: center;
     padding: 1rem;
