--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,14 @@
 
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
   font-family: "Poppins", sans-serif;
+  min-height: 100vh;
 }
 
 #root {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
