--- a/frontend/src/styles/Carousel.css
+++ b/frontend/src/styles/Carousel.css
@@ -1,10 +1,12 @@
 .carousel-section {
   margin: 2rem 0;
   padding: 0 2rem;
+  background-color: #f5f5f5;
 }
 
 .carousel-section:first-of-type {
-  margin-top: 3rem;
+  margin-top: 0;
+  padding-top: 2rem;
 }
 
 .carousel-title {
